In progress: took out both the questions on a forum about my issues I had yesterday because still no success today. Fixed: Nav.js: took in another super state called Clicklogo, added a special id of home in the renderHome function, made another function called clickstatuslogo to do what I did eariler either true or false status. In render I Created a let variable with if or else conditional like yesterday. In return I moved the div of logo to be inside the ul list andI created wrapping link tags so the navigation works to navigate the logo to homepage once clicked. Used the clickstatuslogo to display the image onClick with an arrow function and took in the let variable logoclick. Fixed: _mobile.scss: Cleaned the code by taking away the test I did yesterday with hover. Fixed: _tablet.scss: added the specific id logo img to change the img itself with its height and width, will change the more exact tomorrow when I shall work on the design more in tablet for the dynamic menu. At first now the image button were hidding as soon I clicked on one of the image buttons I fixed it by using the special id of home I created in the Nav.js and set that to display none instead of the className select box home had it, because it affected all the other three buttons to disappear once clicked. Fixed: Summary: the logo image can now change to onClick status with another image showing, with help of react router it will navigate to the homepage once clicked. Notice once in tablet mode that the images disappeared once clicked, I fixed it with a special id  called home in Nav.js and took the special id called home to display none instead if having it in the className select box home in tablet mode styling.

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -334,8 +334,3 @@ nav{
     background-size: cover;
     padding: 0;
 }
-
-.waterTestH :hover .dragon-links--images{
-  background-image:url('../images/BackgroundSrc/dragonscales_homepage.png');  
-    
-}
