--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -3,7 +3,13 @@
 }
 
 
-.select-box--home {
+#logo img{
+    height: 70px;
+    width: 100px;
+}
+
+#home {
     display: none;
 
 }
+
